--- a/main/django-app/novnc-proxy-django-master/static/novnc/vnc.html
+++ b/main/django-app/novnc-proxy-django-master/static/novnc/vnc.html
@@ -265,7 +265,7 @@
     <!-- Connect button -->
     <div class="noVNC_center">
         <div id="noVNC_connect_dlg">
-            <div class="noVNC_logo" translate="no"><span>no</span>VNC</div>
+            <div class="noVNC_logo" translate="no"><span>Forensic</span>VM</div>
             <div id="noVNC_connect_button"><div>
                 <img alt="" src="app/images/connect.svg"> Connect
             </div></div>
