New button to configure forensicVM. Still have to code events

--- a/main/django-app/novnc-proxy-django-master/static/novnc/app/delete/vnc.html
+++ b/main/django-app/novnc-proxy-django-master/static/novnc/app/delete/vnc.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="noVNC_loading">
+<html class="noVNC_loading">
 <head>
 
     <!--
@@ -145,6 +145,19 @@
                 <textarea id="noVNC_clipboard_text" rows=5></textarea>
             </div>
             </div>
+
+            <!-- NGAM:Extra button -->
+            <input type="image" alt="Ngam" src="app/images/clipboard.svg"
+                id="noVNC_ngam_button" class="noVNC_button"
+                title="Ngam">
+            <div class="noVNC_vcenter">
+            <div id="noVNC_ngam" class="noVNC_panel">
+                <div class="noVNC_heading">
+                    <img alt="" src="app/images/clipboard.svg"> Clipboard
+                </div>                
+            </div>
+            </div>
+            <!-- NGAM:Extra button -->
 
             <!-- Toggle fullscreen -->
             <input type="image" alt="Full Screen" src="app/images/fullscreen.svg"
